# telegram-media-dl

./: .gitignore  README.md
.serena/: project.yml
backend/: .env.example  config.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chats.py  deps.py  download.py  fs.py  preview.py  settings.py
backend/app/bot/: handlers.py  webhook.py
backend/app/core/: acl.py  auth.py  client_pool.py  config.py  downloader.py  keyframe_extractor.py  queue.py  session_store.py
backend/app/miniapp/: routes.py  verify.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FolderPicker.tsx  MediaPreviewModal.tsx  MediaThumb.tsx  ThemeToggle.tsx
frontend/src/components/ui/: button.tsx  input.tsx  sheet.tsx  skeleton.tsx
frontend/src/lib/: api.ts  format.ts  motion.ts  theme.ts  twa.ts  useFocusTrap.ts  useUrlParam.ts  ws.ts
frontend/src/pages/: AppShell.tsx  ChatMedia.tsx  ChatsSidebar.tsx  DownloadsSheet.tsx  Login.tsx  SettingsSheet.tsx
frontend/src/stores/: downloads.ts
scripts/: dev.sh  setup.sh  stop.sh
